# TextSpitter

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEXTSPITTER_2_0_RUST_ROADMAP.md  core_requirements.in  core_requirements.txt  dev_requirements.in  dev_requirements.txt  pyproject.toml  readme-ai.md  requirements.txt  setup.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: rd_activity_log.md
.github/workflows/: docs.yml  python-publish.yml  tests.yml
TextSpitter/: __init__.py  _fallback.py  cli.py  core.py  logger.py  main.py
TextSpitter/guide/: __init__.py  overview.py  quickstart.py  recipes.py  tutorial.py  usecases.py
docs/: index.html  make.py  overview.html  quickstart.html  recipes.html  tutorial.html  usecases.html
docs_src/: __init__.py  overview.py  quickstart.py  recipes.py  tutorial.py  usecases.py
src/: chunk.rs  encoding.rs  lib.rs  normalize.rs  separator.rs  token.rs
tests/: conftest.py  test_chunker.py  test_cli.py  test_csv.py  test_detect_encoding.py  test_docx.py  test_file_extractor.py  test_normalizer.py  test_pdf.py  test_rust_integration.py  test_token_counter.py  test_txt.py  test_word_loader.py  txt_test.py
textspitter_fsecada01.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
