[package]
name = "textspitter-core"
version = "2.0.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
chardetng = "0.1"
rayon = "1"
regex = "1"
unicode-normalization = "0.1"
tiktoken-rs = "0.5"

[features]
default = []
simd = ["memchr/std"]

[dependencies.memchr]
version = "2"
optional = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
